# evm-arbitrage

./: .gitignore  Cargo.toml  README.md  failed.txt  out.txt  skipped.txt  sqrt_o
libraries/uniswap-v2-sdk-rs/: Cargo.toml
libraries/uniswap-v2-sdk-rs/src/: constants.rs  lib.rs  router.rs
libraries/uniswap-v2-sdk-rs/src/entities/: pair.rs  route.rs
libraries/uniswap-v3-sdk-rs/: Cargo.toml
libraries/uniswap-v3-sdk-rs/src/: error.rs  lib.rs  tests.rs
libraries/uniswap-v3-sdk-rs/src/entities/: mod.rs  pool.rs  tick_list_data_provider.rs  tick_sync.rs  trade.rs
libraries/uniswap-v3-sdk-rs/src/extensions/: ephemeral_tick_data_provider.rs  ephemeral_tick_map_data_provider.rs  tick_map.rs
libraries/uniswap-v3-sdk-rs/src/utils/: swap_math.rs  tick_list.rs
libraries/utils/: Cargo.toml
libraries/utils/src/: errors.rs  lib.rs  logger.rs  parser.rs  util.rs
programs/alloy-event-listener/: Cargo.toml
programs/alloy-event-listener/src/: main.rs
programs/event-listener/: Cargo.toml
programs/event-listener-v1/: Cargo.toml
programs/event-listener-v1/src/: helper.rs  main.rs
programs/event-listener-v1/src/contracts/: contracts.txt
programs/event-listener-v2/: Cargo.toml
programs/event-listener-v2/src/: enums.rs  main.rs  structs.rs
programs/event-listener/src/: main.rs  parser.rs  process.rs  structs.rs  util.rs
programs/identifier/: Cargo.toml
programs/identifier/src/: main.rs
programs/mem-pool-listener/: Cargo.toml
programs/mem-pool-listener/resources/: Transaction.txt  compare.txt  pool_txns.txt  swap.txt  tx.json  uniswap.txt
programs/mem-pool-listener/src/: helper.rs  main.rs  structs.rs
programs/price-compare/: Cargo.toml
programs/price-compare/resource/: factory_v2.json  pools-weth.json  run.txt  test.txt  tokens_to_pool_weth.json
programs/price-compare/src/: fetch.rs  logger.rs  main.rs  parser.rs  pools.rs  scanner.rs  slippage.rs  structs.rs
programs/solver/: Cargo.toml
programs/solver/src/: constants.rs  contracts.rs  dijkstra.rs  enums.rs  fetch.rs  helper.rs  logger.rs  main.rs  parser.rs  pools.rs  process.rs  scanner.rs  slippage.rs  structs.rs
programs/solver/src/pools/: mod.rs  v2.rs  v3.rs
programs/solver/src/pools/curve/: mod.rs
resources/: addresses.txt  curve_error_pools.json  curve_pools.json  curve_pools_splitted.json  curve_token_metadata.json  curve_tokens.json  curve_tokens_to_pool.json  graph.json  graph.txt  input.json  pools.json  pools_combined.json  pools_v3.json  slippage.txt  sushiv2_tokens_to_pool.json  ticks.json  token_address.json  token_metadata.json  token_metadata_combined.json  tokens.json  tokens_to_pool.json  tokens_to_pool_v2.json  tokens_to_pool_v3.json  uniswapv2_tokens_to_pool.json  uniswapv3_tokens_to_pool.json
resources/contracts/: curve_address_provider.json  curve_pool_1.json
src/: enums.rs  errors.rs  helper.rs  main.rs  parser.rs  process.rs  structs.rs  util.rs
src/contracts/: remove.txt
