[workspace]
members = [
    "programs/*",
    "libraries/*"
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
futures = "0.3.14"
futures-util = "0.3.31"
web3 = "0.19.0"
num-traits = "0.2"
hex = "0.4.3"
hex-literal = "1.0.0"
colored = "3.0.0"
tokio = "1.46.1"
alloy = { version = "1.0.18", features = ["full"] }
alloy-primitives = { version = "1.2.1", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
num-bigint = "0.4"
thiserror = "2.0.12"
log = "0.4.27"
env_logger = "0.11.8"
uniswap-v3-sdk = { version = "5.0.0", features = ["extensions", "std"] }
uniswap-sdk-core = "5.1.0"
utils = { path = "libraries/utils" }
