[workspace]
members = [
    "programs/*",
    "libraries/*"
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
futures = "0.3.14"
futures-util = "0.3.31"
web3 = "0.19.0"
hex = "0.4.3"
hex-literal = "1.0.0"
colored = "3.0.0"
tokio = "1.46.1"
alloy = { version = "1.0.18", features = ["full"] }
alloy-primitives = { version = "1.2.1", default-features = false }
alloy-sol-types = { version = "1.2.1", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
num-bigint = "0.4"
num-traits = { version = "0.2.19", default-features = false }
num-integer = { version = "0.1.46", default-features = false }
once_cell = "1.20"
thiserror = "2.0.12"
log = "0.4.27"
env_logger = "0.11.8"
uniswap-v3-sdk = { version = "5.0.0", features = ["extensions", "std"] }
uniswap-sdk-core = "5.1.0"
uniswap-v2-sdk = { path = "libraries/uniswap-v2-sdk-rs" }
utils = { path = "libraries/utils" }
