[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
web3.workspace = true
hex.workspace = true
num-bigint.workspace = true
thiserror.workspace = true
dotenv.workspace = true
alloy.workspace = true
