[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
web3.workspace = true
hex.workspace = true
num-bigint.workspace = true
thiserror.workspace = true
dotenv.workspace = true
alloy.workspace = true
serde_json.workspace = true
uniswap-v2-sdk.workspace = true
uniswap-v3-sdk.workspace = true
uniswap-sdk-core.workspace = true
