[package]
name = "solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures.workspace = true
web3.workspace = true
num-traits.workspace = true
hex-literal.workspace = true
colored.workspace = true
tokio.workspace = true
utils.workspace = true
