[package]
name = "solver"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
alloy-primitives.workspace = true
tokio.workspace = true
futures-util.workspace = true
futures.workspace = true
utils.workspace = true
anyhow.workspace = true
colored.workspace = true
serde_json.workspace = true
serde.workspace = true
log.workspace = true
env_logger.workspace = true
dotenv.workspace = true
uniswap-v3-sdk.workspace = true
uniswap-sdk-core.workspace = true
